--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 							{ name: "question2", type: "text", title: "Question 2" },
 							{ name: "question3", type: "matrix", rows: 
 							["Row 1",{name: "row2", title: "Row 2"}], columns: ["Column 1","Column 2","Column 3"],
-						    choices: ["1","2",3], "multipleChoice": true}
+								choices: ["1","2",3], "multipleChoice": true},
+							{ name: "question4", type: "matrix", choices: [1,2,3], cellType: "comment", inline: true,
+								rows: ["Row1", "Row2"], columns: [{name: "Column1", cellType: "dropdown"}, "column2"], multipleChoice: true}
 						]}
 					]
 				}, 
