Added question description

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			pages: [
 				{
 					name: "page1", title: "Page 1", elements: [
-						{ inline: true, readOnly: false, type: "radio", "name": "radio1", choices: [
+						{ inline: true, readOnly: false, description: "blah blah blah", type: "radio", "name": "radio1", choices: [
 							{ name: "choice1" }, 
 							"Choice 2",
 						]},
