Added colCount to multitext

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 						},
 						{
 							name: "question7",
+							colCount: 0,
 							type: "multipletext",
 							items: [
 								{ name: "item1", title: "Item 1" }, 
