Fixed group question numbers

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 					name: "page1",
 					elements: [
 						{
+							type: "text",
+							name: "hjgjhg"
+						},
+						{
 							type: "group",
 							name: "group1",
 							elements: [
