Fixed visible ifs for multitext and matrix

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					elements: [
 						{
 							type: "text",
-							name: "hjgjhg"
+							name: "hjgjhg",
+							visibleIf: "{question7.item1} = hello"
 						},
 						{
 							type: "group",
